# adaptive-aggregations

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  install_dependencies.sh  install_deps.sh  listen_script.sh  loop_script.sh
adaptive/: CMakeLists.txt  coordinator.cpp  definitions.h  launch_coordinator.sh  launch_worker.sh  worker.cpp
adaptive-aggregation/: CMakeLists.txt  coordinator.cpp  launch.sh  policy_model.py  worker.cpp
adaptive-aggregation/heterogeneous/: worker.cpp
adaptive-aggregation/homogeneous/: definitions.h  launch.sh  worker.cpp
analysis/logs/micro-benchmarks/: README.md  mkdir_logs.sh
analysis/logs/micro-benchmarks/2024_07_28_16_30_00/: iperf.csv  ms.csv  sm.csv
analysis/logs/micro-benchmarks/2024_07_28_18_23_00/: ms.csv
analysis/logs/micro-benchmarks/2024_07_29_00_54_00/: iperf.csv  mm.csv  ms.csv  sm.csv  ss.csv
analysis/logs/micro-benchmarks/2024_08_25_06_30_00/: node_0.txt  node_1.txt
analysis/logs/micro-benchmarks/2024_08_25_06_45_00/: node_0.txt  node_1.txt  node_2.txt
analysis/logs/micro-benchmarks/2024_09_03_15_55_00/: node_0.txt  node_1.txt
analysis/logs/micro-benchmarks/2024_09_03_18_38_00/: node_0.txt  node_1.txt
configs/: README.md  aws_2_workers.json  aws_4_workers.json  config_aws.json  config_local.json  local.json
include/: defaults.h
include/adaptive/: common.h  node_monitor.h  policy.h  state_messages.h  task_metrics.h  task_scheduler.h  worker_state.h
include/allocators/rpmalloc/: rpmalloc_allocator.h
include/bench/: PerfEvent.hpp  bench.h  common_flags.h  heterogeneous_thread_group.h  logger.h  stopwatch.h
include/common/: alignment.h  concurrent_constrained_fifo.h  concurrent_mpsc_queue.h  io_uring_pool.h  page.h
include/concepts_traits/: concepts_alloc.h  concepts_hashtable.h
include/core/: page.h
include/core/buffer/: eviction_buffer.h  inserter_partitioned.h  page_buffer.h  partition_buffer.h  partition_inserter.h  tuple_buffer.h
include/core/hashtable/: hashtable.h  hashtable_base.h  hashtable_global.h  hashtable_local.h  hashtable_page.h  ht_base.h  ht_global.h  ht_local.h  ht_page.h  ht_utils.h
include/core/hashtable/sketch/: cpc_wrapper.h  (+1 more)
include/core/memory/: alloc.h  block_allocator.h  partition_block_allocator.h
include/core/network/: connection.h  network_manager.h  network_manager_old.h  page_communication.h  pointer_ring.h
include/core/sketch/: hll_custom.h
include/core/storage/: cache.h  chunked_list.h  file.h  io_manager.h  page_local.h  table.h
include/exceptions/: exceptions.h  exceptions_io_uring.h  exceptions_misc.h  exceptions_network.h
include/misc/concepts_traits/: concepts_alloc.h  concepts_buffer.h  concepts_common.h  concepts_hashtable.h  concepts_network.h  concepts_page.h  type_traits_common.h
include/misc/exceptions/: exceptions_alloc.h  exceptions_file.h  exceptions_misc.h  exceptions_network.h
include/misc/librand/: random.h
include/network/: concepts.h  connection.h  network.h  network_manager.h  network_manager_old.h  page_communication.h  pointer_ring.h
include/storage/: cache.h  chunked_list.h  file.h  io_manager.h  page.h  page_local.h  policy.h  table.h
include/storage/page/: page.h
include/system/: node.h  stopwatch.h  topology.h
include/ubench/: common_flags.h  debug.h  heterogeneous_thread_group.h
include/utils/: atomic_utils.h  configuration.h  custom_concepts.h  custom_type_traits.h  hash.h  logger.h  math.h  spinlock.h  stopwatch.h  topology.h  utils.h
logs/micro-benchmarks/: 2024_07_24_02_28_00_single_thread_multiple_conn.csv  2024_07_24_02_46_00_iperf.csv
logs/micro-benchmarks/2024_07_28_16_30_00/: ss.csv
logs/micro-benchmarks/2024_07_28_18_23_00/: iperf.csv  sm.csv  ss.csv
micro-benchmarks/: CMakeLists.txt  generate_data.cpp
micro-benchmarks/aggregation/: CMakeLists.txt  launch_homogeneous.sh
micro-benchmarks/aggregation/heterogeneous/: bench.cpp  config.h  definitions.h  heterogeneous.cpp  launch.sh  launch_heterogeneous.sh  types.h
micro-benchmarks/aggregation/homogeneous/: bench.cpp  config.h  definitions.h  homogeneous.cpp  launch.sh
micro-benchmarks/aggregation/local/: bench.cpp  config.h  definitions.h  launch.sh  local.cpp  query.cpp
micro-benchmarks/connection-model/: CMakeLists.txt  egress_multithreaded_send.cpp  egress_multithreaded_send_uring.cpp  egress_singlethreaded_send.cpp  epoll_ingress.cpp  ingress_multithreaded_recv.cpp  ingress_singlethreaded_recv.cpp  multithreaded_ingress.cpp  stream_egress.cpp  stream_ingress.cpp  stream_ingress_multishot.cpp  stream_ingress_multishot_multithreaded.cpp
micro-benchmarks/protocol/: CMakeLists.txt  egress_multithreaded_send.cpp  egress_multithreaded_send_uring.cpp  egress_singlethreaded_send.cpp  epoll_ingress.cpp  ingress_multithreaded_recv.cpp  ingress_singlethreaded_recv.cpp  multithreaded_ingress.cpp  stream_egress.cpp  stream_egress_send.cpp  stream_ingress.cpp  stream_ingress_multishot.cpp  stream_ingress_multishot_multithreaded.cpp
micro-benchmarks/send-recv/: CMakeLists.txt  recv.cpp  recv_uring.cpp  send.cpp  send_recv_uring.cpp  send_recv_uring_mshot.cpp  send_uring.cpp
micro-benchmarks/shuffle/: CMakeLists.txt  groupby_heterogeneous.cpp  groupby_homogeneous.cpp  groupby_script_heterogeneous.sh  groupby_script_homogeneous.sh  shuffle.cpp  shuffle_heterogeneous.cpp  shuffle_homogeneous.cpp  shuffle_ingress.cpp  shuffle_receiver.cpp  shuffle_script.sh  shuffle_script_heterogeneous.sh  shuffle_script_homogeneous.sh
micro-benchmarks/shuffle/heterogeneous/: bench.cpp  definitions.h
micro-benchmarks/shuffle/homogeneous/: bench.cpp  config.h  definitions.h
micro-benchmarks/shuffle_old/: CMakeLists.txt  shuffle_heterogeneous.cpp  shuffle_homogeneous.cpp
micro-benchmarks/sketch/: CMakeLists.txt  config.h  sketch.cpp  test_sketch.cpp
micro-benchmarks/thread-model/: CMakeLists.txt  egress_heterogeneous.cpp  egress_homogeneous.cpp  ingress_heterogeneous.cpp  ingress_homogeneous.cpp
plots/: plot_micro-benchmarks.R
terraform/: main.tf
terraform/modules/: egress.sh  ingress.sh  instance.tf  networking.tf  variables.tf
(+194 files in other folders)
