add_executable(stream_egress stream_egress.cpp)
add_executable(stream_ingress stream_ingress.cpp)
add_executable(stream_ingress_multishot stream_ingress_multishot.cpp)
add_executable(epoll_ingress epoll_ingress.cpp)
add_executable(multithreaded_ingress multithreaded_ingress.cpp)

target_link_libraries(stream_egress TBB::tbb gflags -luring)
target_link_libraries(stream_ingress TBB::tbb gflags -luring)
target_link_libraries(epoll_ingress TBB::tbb gflags -luring)
target_link_libraries(multithreaded_ingress TBB::tbb gflags -luring)
