add_executable(stream_egress stream_egress.cpp)
add_executable(stream_ingress stream_ingress.cpp)
add_executable(epoll_ingress epoll_ingress.cpp)
add_executable(multithreaded_ingress multithreaded_ingress.cpp)
add_executable(stream_ingress_multishot stream_ingress_multishot.cpp)
add_executable(stream_ingress_multishot_multithreaded stream_ingress_multishot_multithreaded.cpp)
add_executable(egress_singlethreaded_send egress_singlethreaded_send.cpp)
add_executable(egress_multithreaded_send egress_multithreaded_send.cpp)
add_executable(ingress_singlethreaded_recv ingress_singlethreaded_recv.cpp)
add_executable(ingress_multithreaded_recv ingress_multithreaded_recv.cpp)

target_link_libraries(stream_egress TBB::tbb gflags -luring)
target_link_libraries(stream_ingress TBB::tbb gflags -luring)
target_link_libraries(epoll_ingress TBB::tbb gflags -luring)
target_link_libraries(multithreaded_ingress TBB::tbb gflags -luring)
target_link_libraries(stream_ingress_multishot TBB::tbb gflags -luring)
target_link_libraries(stream_ingress_multishot_multithreaded TBB::tbb gflags -luring)
target_link_libraries(egress_singlethreaded_send TBB::tbb gflags -luring)
target_link_libraries(egress_multithreaded_send TBB::tbb gflags -luring)
target_link_libraries(ingress_singlethreaded_recv TBB::tbb gflags -luring)
target_link_libraries(ingress_multithreaded_recv TBB::tbb gflags -luring)
