add_executable(shuffle_old shuffle.cpp)
add_executable(shuffle_receiver_old shuffle_receiver.cpp)
add_executable(shuffle_ingress_old shuffle_ingress.cpp)
add_executable(shuffle_homogeneous_old shuffle_homogeneous.cpp)
add_executable(shuffle_heterogeneous_old shuffle_heterogeneous.cpp)
add_executable(groupby_homogeneous_old ../aggregation/homogeneous/bench.cpp)
add_executable(groupby_heterogeneous_old ../aggregation/heterogeneous/bench.cpp)

target_link_libraries(shuffle_old TBB::tbb gflags -luring)
target_link_libraries(shuffle_receiver_old TBB::tbb gflags -luring)
target_link_libraries(shuffle_ingress_old TBB::tbb gflags -luring)
target_link_libraries(shuffle_homogeneous_old TBB::tbb TBB::tbbmalloc rpmalloc gflags -luring)
target_link_libraries(shuffle_heterogeneous_old TBB::tbb TBB::tbbmalloc rpmalloc gflags -luring)
target_link_libraries(groupby_homogeneous_old TBB::tbb TBB::tbbmalloc rpmalloc gflags -luring)
target_link_libraries(groupby_heterogeneous_old TBB::tbb TBB::tbbmalloc rpmalloc gflags -luring)
